[gd_scene load_steps=69 format=3 uid="uid://c8w8nv36kjvjj"]

[ext_resource type="Script" uid="uid://b32n8s4pkaq3b" path="res://scripts/components/health_component.gd" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://tk10ftsl8y3a" path="res://scripts/actors/enemy.gd" id="1_md0e3"]
[ext_resource type="Resource" uid="uid://ckjc1cdhkvxg6" path="res://resources/player/attack/player_light_attacks.tres" id="2_2sbpf"]
[ext_resource type="Script" uid="uid://bbrgs7ayus45u" path="res://scripts/components/hurtbox.gd" id="2_4ra3w"]
[ext_resource type="Shader" uid="uid://cnjkhh8kggb2q" path="res://shaders/hit_flash.gdshader" id="2_5uy6h"]
[ext_resource type="Resource" uid="uid://dyb1h7belqw60" path="res://resources/enemy/attack/skill_x.tres" id="2_gst0f"]
[ext_resource type="Resource" uid="uid://dlyjau1qwi2fq" path="res://resources/player/finisher/default.tres" id="3_thsr5"]
[ext_resource type="Resource" uid="uid://dxwv1at0sn6o4" path="res://resources/enemy/attack/skill_a.tres" id="4_sm4rh"]
[ext_resource type="Resource" uid="uid://besl07w08l6s" path="res://resources/player/jump/default.tres" id="5_g0yyi"]
[ext_resource type="Script" uid="uid://dewrlich57pgi" path="res://scripts/components/ai_controller.gd" id="5_md484"]
[ext_resource type="Resource" uid="uid://5dqv7xvlptll" path="res://resources/player/counter/mikiri.tres" id="6_5ie7m"]
[ext_resource type="Script" uid="uid://dus5o11ra71f" path="res://scripts/core/state_machine.gd" id="6_ipns3"]
[ext_resource type="Script" uid="uid://c50xfgbngchgg" path="res://scripts/states/locomotion_state.gd" id="7_8qclf"]
[ext_resource type="Resource" uid="uid://bqjgtxke4um5v" path="res://resources/player/parried/default.tres" id="7_ekh6n"]
[ext_resource type="Resource" uid="uid://0pfl3fbcw24b" path="res://resources/player/skills/default_sequence_skill.tres" id="8_5lniq"]
[ext_resource type="Resource" uid="uid://bt3sgcgwjxve0" path="res://resources/player/locomotion/default.tres" id="9_2sbpf"]
[ext_resource type="Script" uid="uid://bjvp3kd6bmkho" path="res://scripts/components/physics_component.gd" id="9_8qclf"]
[ext_resource type="Script" uid="uid://m2bbkg5u3e8f" path="res://scripts/states/stagger_state.gd" id="10_s1ycm"]
[ext_resource type="Script" uid="uid://beortrl7adiim" path="res://scripts/components/buffer_component.gd" id="10_w8i8w"]
[ext_resource type="Script" uid="uid://6j164hqmaqt2" path="res://scripts/states/parry_state.gd" id="11_shcg2"]
[ext_resource type="Script" uid="uid://hhcv8mh33t6y" path="res://scripts/components/stamina_component.gd" id="11_w8i8w"]
[ext_resource type="Resource" uid="uid://of3fc8ba47yj" path="res://resources/player/riposte/default.tres" id="12_13roy"]
[ext_resource type="Resource" uid="uid://b7kijgne205pc" path="res://resources/player/parry/default.tres" id="12_ile5s"]
[ext_resource type="PackedScene" uid="uid://ciepgnvn26lbl" path="res://scenes/enemy_status_ui.tscn" id="12_otmr2"]
[ext_resource type="Resource" uid="uid://hoyhnn4kdadc" path="res://resources/player/stagger/default.tres" id="12_rogs8"]
[ext_resource type="Script" uid="uid://ba650tjbftjqi" path="res://scripts/states/parried_state.gd" id="13_1x4g4"]
[ext_resource type="Script" uid="uid://c3f0ddxqxcn8k" path="res://scripts/states/attack_state.gd" id="15_1x4g4"]
[ext_resource type="Resource" uid="uid://048h5l4vvq4w" path="res://resources/player/wall/default.tres" id="16_b5geg"]
[ext_resource type="Script" uid="uid://24v4chol2qs0" path="res://scripts/profiles/buffer_profile.gd" id="16_ekh6n"]
[ext_resource type="Script" uid="uid://b3auw1r8kc2yi" path="res://scripts/states/block_stun_state.gd" id="17_6awcb"]
[ext_resource type="Script" uid="uid://nl1a7e12lrfa" path="res://scripts/listeners/sound_listener.gd" id="17_shcg2"]
[ext_resource type="Resource" uid="uid://c13fhm2w824s2" path="res://resources/player/block/default.tres" id="18_wjec0"]
[ext_resource type="Resource" uid="uid://dl072xuq1tgt8" path="res://resources/player/countered/default.tres" id="19_a5akt"]
[ext_resource type="Script" uid="uid://bnsx7y061rnqe" path="res://scripts/states/guard_broken_state.gd" id="19_i4rgx"]
[ext_resource type="Resource" uid="uid://diorbol6o41cm" path="res://resources/player/guard_broken/default.tres" id="20_2mchx"]
[ext_resource type="Script" uid="uid://qxnqp6qiqxw" path="res://scripts/components/hitbox.gd" id="20_2pwtc"]
[ext_resource type="Resource" uid="uid://cer2y2x0eksg5" path="res://resources/player/death/default.tres" id="20_4lt7r"]
[ext_resource type="Texture2D" uid="uid://iv3mkbhyvk87" path="res://assets/enemy/spritesheetreiddlemale.png" id="20_e7lhw"]
[ext_resource type="Script" uid="uid://bsk4xllkbirnu" path="res://scripts/states/finisher_ready_state.gd" id="21_2mchx"]
[ext_resource type="Script" uid="uid://b0lnh740qgaih" path="res://scripts/core/attack_executor.gd" id="22_605iw"]
[ext_resource type="Script" uid="uid://cmjo1r3dy7y1a" path="res://scripts/listeners/animation_listener.gd" id="22_sdxul"]
[ext_resource type="Script" uid="uid://b31jt2qq4fmkr" path="res://scripts/components/poise_component.gd" id="23_78kod"]
[ext_resource type="Script" uid="uid://dmqafi2pyifje" path="res://scripts/components/skill_combo_component.gd" id="28_7v6cf"]
[ext_resource type="Script" uid="uid://cqen1cgottixs" path="res://scripts/components/facing_component.gd" id="31_5ie7m"]
[ext_resource type="Script" uid="uid://k7ywlbk605tf" path="res://scripts/components/air_combo_component.gd" id="34_5utat"]
[ext_resource type="Script" uid="uid://7awh4v6bsojt" path="res://scripts/components/combo_component.gd" id="35_2sbpf"]
[ext_resource type="Script" uid="uid://dhdu4hixec0wa" path="res://scripts/core/surface_contact_component.gd" id="35_5lniq"]
[ext_resource type="Script" uid="uid://bcyyrvir8fm3w" path="res://scripts/components/wall_detector_component.gd" id="37_g0yyi"]
[ext_resource type="Script" uid="uid://b72ucjj1gl7t2" path="res://scripts/states/sequence_state.gd" id="37_x6q4o"]
[ext_resource type="Script" uid="uid://dtl5q4dyb0mxr" path="res://scripts/components/path_follower_component.gd" id="39_13roy"]
[ext_resource type="Script" uid="uid://cycmw65rta0mh" path="res://scripts/states/execute_counter_state.gd" id="42_hyejq"]
[ext_resource type="Script" uid="uid://clhnftdn6qup" path="res://scripts/states/airborne_state.gd" id="48_sm4rh"]
[ext_resource type="Script" uid="uid://d18awpld4ar25" path="res://scripts/states/dash_state.gd" id="50_7w3jn"]
[ext_resource type="Script" uid="uid://80lq1gnacaa2" path="res://scripts/states/countered_state.gd" id="52_uiwvf"]
[ext_resource type="Script" uid="uid://kqlkm03xp1rg" path="res://scripts/states/wall_slide_state.gd" id="54_5utat"]
[ext_resource type="Script" uid="uid://cjolmubu1vmxi" path="res://scripts/states/death_state.gd" id="54_b5geg"]
[ext_resource type="Script" uid="uid://bwxgsevlwe736" path="res://scripts/core/action_cost_validator.gd" id="58_0b4fd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4w8v"]
shader = ExtResource("2_5uy6h")
shader_parameter/flash_color = Color(1, 0, 0, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_gst0f"]
resource_name = "Idle"
length = 2.50002
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667, 1.83333, 2, 2.16667, 2.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_sm4rh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy/Visuals/Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("20_e7lhw")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy/Visuals/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Enemy/Visuals/Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Enemy/Visuals/Sprite2D:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Enemy/Visuals/Sprite2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Enemy/Visuals/ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j0dkt"]
resource_name = "riposte"
length = 2.50002
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("20_e7lhw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy/Visuals/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy/Visuals/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Enemy/Visuals/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333334, 0.500001, 0.666668, 0.833335, 1, 1.16667, 1.33334, 1.5, 1.66667, 1.83334, 2, 2.16667, 2.33334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Enemy/Visuals/Sprite2D:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.14, 0.15, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Enemy/Visuals/ColorRect:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.150639, 0.351168),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a5akt"]
resource_name = "skill_a_1"
length = 1.50002
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("20_e7lhw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy/Visuals/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy/Visuals/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Enemy/Visuals/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.33335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Enemy/Visuals/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5lniq"]
resource_name = "skill_x_1"
length = 0.65
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/Visuals/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("20_e7lhw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy/Visuals/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy/Visuals/Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Enemy/Visuals/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.001, 0.166667, 0.333333, 0.5, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Enemy/Visuals/Sprite2D:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.65),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5lniq"]
_data = {
&"Idle": SubResource("Animation_gst0f"),
&"RESET": SubResource("Animation_sm4rh"),
&"riposte": SubResource("Animation_j0dkt"),
&"skill_a_1": SubResource("Animation_a5akt"),
&"skill_x_1": SubResource("Animation_5lniq")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e7lhw"]
radius = 31.0
height = 62.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gst0f"]
size = Vector2(32, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya47j"]
size = Vector2(698, 108)

[sub_resource type="Resource" id="Resource_2sbpf"]
script = ExtResource("16_ekh6n")
buffer_window = 0.5
metadata/_custom_type_script = "uid://24v4chol2qs0"

[node name="EnemyEntity" type="Node2D"]

[node name="Enemy" type="CharacterBody2D" parent="."]
script = ExtResource("1_md0e3")
skill_x = ExtResource("2_gst0f")
skill_y = ExtResource("8_5lniq")
skill_a = ExtResource("4_sm4rh")
jump_profile = ExtResource("5_g0yyi")
finisher_profile = ExtResource("3_thsr5")
parry_profile = ExtResource("12_ile5s")
riposte_profile = ExtResource("12_13roy")
mikiri_riposte_profile = ExtResource("6_5ie7m")
block_stun_profile = ExtResource("18_wjec0")
stagger_profile = ExtResource("12_rogs8")
parried_profile = ExtResource("7_ekh6n")
guard_broken_profile = ExtResource("20_2mchx")
locomotion_profile = ExtResource("9_2sbpf")
countered_profile = ExtResource("19_a5akt")
death_profile = ExtResource("20_4lt7r")
wall_slide_profile = ExtResource("16_b5geg")
base_poise = 10.0

[node name="Visuals" type="Node2D" parent="Enemy"]

[node name="Sprite2D" type="Sprite2D" parent="Enemy/Visuals"]
visible = false
position = Vector2(0, -44)
scale = Vector2(0.4, 0.4)
texture = ExtResource("20_e7lhw")
hframes = 4
vframes = 4

[node name="ColorRect" type="ColorRect" parent="Enemy/Visuals"]
self_modulate = Color(0.00319518, 0.00319518, 1, 1)
material = SubResource("ShaderMaterial_c4w8v")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_5lniq")
}

[node name="AnimationListener" type="Node" parent="Enemy" node_paths=PackedStringArray("animation_player", "state_machine")]
script = ExtResource("22_sdxul")
animation_player = NodePath("../AnimationPlayer")
state_machine = NodePath("../StateMachine")
metadata/_custom_type_script = "uid://cmjo1r3dy7y1a"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
visible = false
shape = SubResource("CapsuleShape2D_e7lhw")

[node name="Hurtbox" type="Area2D" parent="Enemy"]
visible = false
collision_layer = 8
collision_mask = 4
script = ExtResource("2_4ra3w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Hurtbox"]
shape = SubResource("RectangleShape2D_gst0f")

[node name="AttackHitbox" type="Area2D" parent="Enemy"]
collision_layer = 16
collision_mask = 32
monitoring = false
script = ExtResource("20_2pwtc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/AttackHitbox"]

[node name="DetectionArea" type="Area2D" parent="Enemy"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/DetectionArea"]
position = Vector2(207, -22)
shape = SubResource("RectangleShape2D_ya47j")

[node name="SFXEnemy" type="AudioStreamPlayer2D" parent="Enemy"]

[node name="SoundListener" type="Node" parent="Enemy" node_paths=PackedStringArray("state_machine")]
script = ExtResource("17_shcg2")
state_machine = NodePath("../StateMachine")
metadata/_custom_type_script = "uid://nl1a7e12lrfa"

[node name="HealthComponent" type="Node" parent="Enemy"]
script = ExtResource("1_7p1mj")

[node name="StaminaComponent" type="Node" parent="Enemy"]
script = ExtResource("11_w8i8w")

[node name="DelayTimer" type="Timer" parent="Enemy/StaminaComponent"]

[node name="AIController" type="Node" parent="Enemy"]
script = ExtResource("5_md484")
metadata/_custom_type_script = "uid://dewrlich57pgi"

[node name="AttackExecutor" type="Node" parent="Enemy"]
script = ExtResource("22_605iw")
metadata/_custom_type_script = "uid://b0lnh740qgaih"

[node name="BufferComponent" type="Node" parent="Enemy"]
script = ExtResource("10_w8i8w")
buffer_profile = SubResource("Resource_2sbpf")
metadata/_custom_type_script = "uid://beortrl7adiim"

[node name="PhysicsComponent" type="Node" parent="Enemy"]
script = ExtResource("9_8qclf")

[node name="PathFollowerComponent" type="Node" parent="Enemy"]
script = ExtResource("39_13roy")
metadata/_custom_type_script = "uid://dtl5q4dyb0mxr"

[node name="ComboComponent" type="Node" parent="Enemy"]
script = ExtResource("35_2sbpf")
attack_set = ExtResource("2_2sbpf")
metadata/_custom_type_script = "uid://7awh4v6bsojt"

[node name="AirComboComponent" type="Node" parent="Enemy"]
script = ExtResource("34_5utat")
metadata/_custom_type_script = "uid://k7ywlbk605tf"

[node name="SkillComboComponent" type="Node" parent="Enemy"]
script = ExtResource("28_7v6cf")
metadata/_custom_type_script = "uid://dmqafi2pyifje"

[node name="PoiseComponent" type="Node" parent="Enemy"]
script = ExtResource("23_78kod")
metadata/_custom_type_script = "uid://b31jt2qq4fmkr"

[node name="FacingComponent" type="Node" parent="Enemy"]
script = ExtResource("31_5ie7m")
metadata/_custom_type_script = "uid://cqen1cgottixs"

[node name="SurfaceContactComponent" type="Node" parent="Enemy"]
script = ExtResource("35_5lniq")
metadata/_custom_type_script = "uid://dhdu4hixec0wa"

[node name="WallDetectorComponent" type="Node2D" parent="Enemy"]
script = ExtResource("37_g0yyi")

[node name="RayCast2D" type="RayCast2D" parent="Enemy/WallDetectorComponent"]
target_position = Vector2(35, 0)

[node name="ActionCostValidator" type="Node" parent="Enemy"]
script = ExtResource("58_0b4fd")
metadata/_custom_type_script = "uid://bwxgsevlwe736"

[node name="StateMachine" type="Node" parent="Enemy"]
script = ExtResource("6_ipns3")
metadata/_custom_type_script = "uid://dus5o11ra71f"

[node name="LocomotionState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("7_8qclf")
metadata/_custom_type_script = "uid://c50xfgbngchgg"

[node name="StaggerState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("10_s1ycm")
metadata/_custom_type_script = "uid://m2bbkg5u3e8f"

[node name="ParryState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("11_shcg2")
metadata/_custom_type_script = "uid://6j164hqmaqt2"

[node name="ParriedState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("13_1x4g4")
metadata/_custom_type_script = "uid://ba650tjbftjqi"

[node name="AttackState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("15_1x4g4")
metadata/_custom_type_script = "uid://c3f0ddxqxcn8k"

[node name="BlockStunState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("17_6awcb")
metadata/_custom_type_script = "uid://b3auw1r8kc2yi"

[node name="GuardBrokenState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("19_i4rgx")
metadata/_custom_type_script = "uid://bnsx7y061rnqe"

[node name="FinisherReadyState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("21_2mchx")
metadata/_custom_type_script = "uid://bsk4xllkbirnu"

[node name="SequenceState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("37_x6q4o")
metadata/_custom_type_script = "uid://b72ucjj1gl7t2"

[node name="ExecuteCounterState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("42_hyejq")
metadata/_custom_type_script = "uid://cycmw65rta0mh"

[node name="CounteredState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("52_uiwvf")
metadata/_custom_type_script = "uid://80lq1gnacaa2"

[node name="DeathState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("54_b5geg")
metadata/_custom_type_script = "uid://cjolmubu1vmxi"

[node name="AirborneState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("48_sm4rh")
metadata/_custom_type_script = "uid://clhnftdn6qup"

[node name="DashState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("50_7w3jn")
metadata/_custom_type_script = "uid://d18awpld4ar25"

[node name="WallSlideState" type="Node" parent="Enemy/StateMachine"]
script = ExtResource("54_5utat")
metadata/_custom_type_script = "uid://kqlkm03xp1rg"

[node name="EnemyStatusUI" parent="Enemy" instance=ExtResource("12_otmr2")]
offset_left = -87.0
offset_top = -122.0
offset_right = -47.0
offset_bottom = -82.0

[node name="PathTarget" type="Node2D" parent="."]
